# rest-timer

./: LICENSE  README.md  bun.lockb  index.html  package.json
src/: App.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: settings.json
src-tauri/src/: control.rs  lib.rs  main.rs  settings.rs
src/api/: timer.ts
src/components/navbar/: Navbar.tsx
src/interfaces/: timer.interface.ts
src/pages/: Donate.tsx  Layout.tsx  Main.tsx  Settings.tsx
